--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,5 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest
+    - name: Codecov
+        uses: codecov/codecov-action@v2.1.0
