--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,11 @@ sonar.organization=janpodavka
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
+sonar.tests=src
+sonar.test.inclusions=src/**/__tests__/**
+
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=__mocks__/**,src/types/**
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
